force-app/main/default/objects/Site_Scorecard__c/Site_Scorecard__c.object-meta.xml
<CustomObject>
    <description>Agent-generated scorecards for expansion site evaluations. Created by Agentforce when a field surveyor or planner requests a site assessment.</description>
    <label>Site Scorecard</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Scorecard ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>