force-app/main/default/objects/Site_Scorecard__c/fields/Competition_Score__c.field-meta.xml
<CustomField>
    <fullName>Competition_Score__c</fullName>
    <label>Competition Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>