force-app/main/default/objects/Site_Scorecard__c/fields/Competitor_Count__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Count__c</fullName>
    <label>Competitor Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>