force-app/main/default/objects/Site_Scorecard__c/fields/Expansion_Site__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Site__c</fullName>
    <label>Expansion Site</label>
    <referenceTo>Expansion_Site__c</referenceTo>
    <relationshipLabel>Site Scorecards</relationshipLabel>
    <relationshipName>Site_Scorecards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>