force-app/main/default/objects/Site_Scorecard__c/fields/Key_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Key_Opportunities__c</fullName>
    <label>Key Opportunities</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>