force-app/main/default/objects/Site_Scorecard__c/fields/Key_Risks__c.field-meta.xml
<CustomField>
    <fullName>Key_Risks__c</fullName>
    <label>Key Risks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>