force-app/main/default/objects/Site_Scorecard__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>