force-app/main/default/objects/Site_Scorecard__c/fields/Payback_Period__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period__c</fullName>
    <label>Payback Period (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>