force-app/main/default/objects/Site_Scorecard__c/fields/Projected_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Monthly_Revenue__c</fullName>
    <label>Projected Monthly Revenue (INR)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>