force-app/main/default/objects/Site_Scorecard__c/fields/Projected_Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Projected_Setup_Cost__c</fullName>
    <label>Projected Setup Cost (INR)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>