force-app/main/default/objects/Site_Scorecard__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly Recommended</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Needs Further Analysis</fullName>
            </value>
            <value>
                <fullName>Not Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>