force-app/main/default/objects/Site_Scorecard__c/fields/Request_Channel__c.field-meta.xml
<CustomField>
    <fullName>Request_Channel__c</fullName>
    <label>Request Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Agentforce Chat</fullName>
                <default>true</default>
                <label>Agentforce Chat</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>