force-app/main/default/objects/Site_Scorecard__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>AI-generated narrative summary of the site scorecard.</description>
    <label>Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>