force-app/main/default/objects/Site_Scorecard__c/fields/Surveyor_GPS_Lat__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_GPS_Lat__c</fullName>
    <label>Surveyor GPS Latitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>