force-app/main/default/objects/Site_Scorecard__c/fields/Surveyor_GPS_Long__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_GPS_Long__c</fullName>
    <label>Surveyor GPS Longitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>